turtleart.star.Star.scala.error
Compilation error:
Star:5: error: not found: value setDirection
  setDirection(Direction.NORTH)
  ^Star:5: error: not found: value Direction
  setDirection(Direction.NORTH)
               ^